AudioPannerNode::setPanningModel() does not update m_panningModel properly https://bugs.webkit.org/show_bug.cgi?id=66830

Patch by Raymond Toy <rtoy@google.com> on 2012-01-27
Reviewed by Kenneth Russell.

Source/WebCore:

Test: webaudio/panner-set-model.html

* webaudio/AudioPannerNode.cpp:
(WebCore::AudioPannerNode::setPanningModel):  Update
m_panningModel appropriately.  Also silently do nothing if the
model is invalid.

LayoutTests:

* webaudio/panner-set-model-expected.txt: Added.
* webaudio/panner-set-model.html: Added.

Canonical link: https://commits.webkit.org/94145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106174 268f45cc-cd09-0410-ab3c-d52691b4dbfc